@@ -1,30 +1,8 @@
 <?php
 if (!defined ('TYPO3_MODE')) die('Access denied.');
 
-if (\TYPO3\CMS\Core\Utility\ExtensionManagementUtility::isLoaded('tt_news')) {
-	// New columns
-	$tempColumns = array (
-		'tx_ratings_enable' => Array (
-			'exclude' => 1,
-			'label' => 'LLL:EXT:ratings/locallang_db.xml:tt_news.tx_ratings_enable',
-			'config' => array (
-				'type'     => 'check',
-				'items'    => array(
-					array('', '')
-				),
-				'default'  => '1'
-			)
-		),
-	);
-
-	\TYPO3\CMS\Core\Utility\ExtensionManagementUtility::addTCAcolumns('tt_news', $tempColumns, 1);
-	\TYPO3\CMS\Core\Utility\ExtensionManagementUtility::addToAllTCAtypes('tt_news', 'tx_ratings_enable;;;;1-1-1');
-}
-
 $tx_ratings_sysconf = unserialize($GLOBALS['TYPO3_CONF_VARS']['EXT']['extConf']['ratings']);
 $tx_ratings_debug_mode_disabled = is_array($tx_ratings_sysconf) && !intval($tx_ratings_sysconf['debugMode']);
-
-
 
 
 \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::allowTableOnStandardPages('tx_ratings_data');
